# weirdnodes

./: .gitignore  LICENSE  README.md  checkrankcorrelations.py  concordanceCheck.py  concordance_check.py  config.py  correlation_examples.py  createRankings.py  create_rankings.py  evaluation.py  globals.py  main.py  net_perturbation.py  outliers_detection_proc.py  requirements.txt  run_ER_enron.py  run_ER_ghosts_mushrooms.py  run_ER_intermediaries.py  run_ER_mixed_anomalies.py  run_ER_volcanoes_blackholes.py  run_from_edgelists.py  setup.cfg  sorting_strategies.py  temporalNetGenerator.py  test_ER_ghosts_mushrooms.py  test_ER_intermediaries.py  test_ER_mixed_anomalies.py  test_ER_vulcanoes_blackholes.py  test_fullpipeline.py  test_fullpipeline_ER.py  test_rankings.py  test_rankings_bydegree.py
20250116_160151/: config.txt  g0.gml  g0_centrality_measures.csv  g1.gml  g1_centrality_measures.csv  g2.gml  g2_centrality_measures.csv  g3.gml  g3_centrality_measures.csv  hits_hubs_precision_at_k.csv  kendall_correlations.csv  pagerank_top_nodes.csv  spearman_correlations.csv
20250117_095117/: config.txt  g0.gml  g0_centrality_measures.csv  g1.gml  g1_centrality_measures.csv  g2.gml  g2_centrality_measures.csv  g3.gml  g3_centrality_measures.csv  indegree_top_nodes.csv  kendall_correlations.csv  outstrength_precision_at_k.csv  spearman_correlations.csv
20250119_200151/: concordance.txt  config.txt  g0.gml  g0_degree.csv  g1.gml  g1_degree.csv  recall_at_k.txt  top_k_nodes.txt
20250121_130619/: config.txt
20250121_131142/: config.txt
20250121_171626/: config.txt
(+1824 files in other folders)
