[metadata]
name = weirdnodes
version = 0.1.0
author = Giancarlo Ruffo
author_email = giancarlo@gmail.com
description = A library for observing changes in centrality measures based rankings in graphs and their perturbations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/giaruffo/weirdnodes
license = {text = "BSD-3-Clause"}
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    networkx

[options.packages.find]
where = src